Add function to create grids and styles

--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
+      <div class="main-wrapper">
+        <h1>Etch-a-Sketch</h1>
+
+        <div class="">
+          <h3>Click:</h3>
+          <button>Black</button>
+          <button>Green</button>
+        </div>
+        <div class="container-wrapper">
+          <div class="container"></div>
+        </div>
       </div>
     </main>
     <script src="script.js"></script>
