Add function for changing color of touchpad

--- a/index.html
+++ b/index.html
@@ -5,23 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-Sketch</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="resources/style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.2/dist/css/bootstrap.min.css"
+    />
   </head>
   <body>
     <main>
       <div class="main-wrapper">
         <h1>Etch-a-Sketch</h1>
 
-        <div class="">
-          <h3>Click:</h3>
-          <button>Black</button>
-          <button>Green</button>
+        <div class="options">
+          <div class="">
+            <label for="color">Choose Color:</label>
+            <select name="color" id="color">
+              <option value="black">Black</option>
+              <option value="green">Green</option>
+              <option value="red">Red</option>
+            </select>
+          </div>
+          <div class="clear-btn"><button>Clear</button></div>
         </div>
+
         <div class="container-wrapper">
           <div class="container"></div>
         </div>
+
+        <div class="slider-wrapper">
+          <h3>Choose Grid Size:</h3>
+          <input type="range" min="2" max="100" value="16" id="slider" />
+          <p class="value">16</p>
+        </div>
       </div>
     </main>
-    <script src="script.js"></script>
+
+    <script src="resources/script.js"></script>
   </body>
 </html>
