Add function to clear styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
               <option value="red">Red</option>
             </select>
           </div>
-          <div class="clear-btn"><button>Clear</button></div>
+          <div class="clear-btn">
+            <button id="clear">Clear</button>
+          </div>
         </div>
 
         <div class="container-wrapper">
