Add features for different color options

--- a/index.html
+++ b/index.html
@@ -20,16 +20,29 @@
 
           <div class="options">
             <div class="color-option">
-              <label for="color">Choose Color:</label>
-              <select name="color" id="color">
-                <option value="black">Black</option>
-                <option value="green">Green</option>
-                <option value="red">Red</option>
-              </select>
+              <div class="">
+                <span>Choose Color:</span>
+              </div>
+              <div class="colors">
+                <div class="">
+                  <button id="black">Black</button>
+                </div>
+                <div class="select-input">
+                  <button id="selectColor">Select</button>
+                  <input type="color" name="Select" id="selectInput" />
+                </div>
+                <div class="">
+                  <button id="randomColor">Random</button>
+                </div>
+              </div>
             </div>
-            <div class="eraser-btn">
+            <!-- <div class="eraser-btn">
               <button id="erase">Eraser</button>
-            </div>
+            </div> -->
+            <!-- <div class="random-btn">
+              <button id="random">Random</button>
+            </div> -->
+
             <div class="clear-btn">
               <button id="clear">Clear</button>
             </div>
